--- a/cssformain.css
+++ b/cssformain.css
@@ -6,6 +6,7 @@ body{
     font-weight: 600;
     background-image: url(https://i.pinimg.com/originals/2d/21/3d/2d213d36f66c318754bd4b78ab9361f1.jpg);
     margin-bottom: 0px;
+        min-width: 750px;
 }
 p{
     font-size: 22px;
